<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/profile_bottom_navigation_item_news"
        android:icon="@drawable/news"
        android:title="@string/profile_text_bottom_navigation_item1"/>
    <item
        android:id="@+id/profile_bottom_navigation_item_search"
        android:icon="@drawable/searh"
        android:title="@string/profile_text_bottom_navigation_item2"/>
    <item
        android:id="@+id/profile_bottom_navigation_item_help"
        android:icon="@drawable/heart"
        android:title="@string/profile_text_bottom_navigation_item3"/>
    <item
        android:id="@+id/profile_bottom_navigation_item_history"
        android:icon="@drawable/history"
        android:enabled="false"
        android:title="@string/profile_text_bottom_navigation_item4"/>
    <item
        android:id="@+id/profile_bottom_navigation_item_profile"
        android:icon="@drawable/profile"
        android:title="@string/profile_text_bottom_navigation_item5"/>
</menu>