<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/light_grey">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/search_placeholder_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/search_icon_zoom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/search_margin54"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/icon_zoom"/>

            <TextView
                android:id="@+id/search_text_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/search_margin37"
                android:layout_marginStart="@dimen/search_margins"
                android:layout_marginEnd="@dimen/search_margins"
                android:textAppearance="@style/HelperText.TextStyle3"
                android:gravity="center_horizontal"
                android:text="@string/search_text_1"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/search_margin10"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:id="@+id/search_text_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/HelperText.TextStyle3"
                    android:text="@string/search_text_2"/>

                <TextView
                    android:id="@+id/search_text_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/HelperText.Link"
                    android:layout_marginStart="@dimen/search_margin4"
                    android:text="@string/search_text_3"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/search_list_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/search_margins"
            android:layout_marginTop="@dimen/search_margins"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_results1"/>

            <TextView
                android:id="@+id/search_keywords"
                android:layout_marginStart="@dimen/search_margin4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/search_margins"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search_results2"/>

            <TextView
                android:id="@+id/search_results_count"
                android:layout_marginStart="@dimen/search_margin4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/search_results_events_string"
                android:layout_marginStart="@dimen/search_margin4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/search_margins"
            android:background="@color/cool_grey"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/cool_grey"/>

    </LinearLayout>

</RelativeLayout>